--- a/email.html
+++ b/email.html
@@ -46,8 +46,10 @@ serif">
     </tr>
     <tr>
         <td>
-            href="${PROJECT_URL}changes">${PROJECT_URL}changes</a></li>
-            </ul> ${CHANGES_SINCE_LAST_SUCCESS,reverse=true, format="Changes for
+            <ul>
+                <li>历史变更记录 : <a href="${PROJECT_URL}changes">${PROJECT_URL}changes</a></li>
+            </ul>
+            ${CHANGES_SINCE_LAST_SUCCESS,reverse=true, format="Changes for
             Build #%n:<br/>%c<br/>",showPaths=true,changesFormat="
             <pre>[%a]<br
             />%m</pre>
